objects/MessagingSession.object
<CustomObject>
    <fields>
        <fullName>CN_Account_Name__c</fullName>
        <formula>MessagingEndUser.CN_Account__r.Name</formula>
        <label>Account Name(CN)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_FeedBackUrl__c</fullName>
        <label>FeedBackUrl</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>CN_Query_Category__c</fullName>
        <label>Query Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>注册账号</fullName>
                    <label>注册 | 账号</label>
                </value>
                <value>
                    <fullName>产品促销</fullName>
                    <label>产品 | 促销</label>
                </value>
                <value>
                    <fullName>配方活动</fullName>
                    <label>配方 | 活动</label>
                </value>
                <value>
                    <fullName>订单物流</fullName>
                    <label>订单 | 物流</label>
                </value>
                <value>
                    <fullName>退货退款</fullName>
                    <label>退货 | 退款</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CN_Query_Status__c</fullName>
        <formula>IF( ISPICKVAL(Status, &apos;New&apos;), &apos;开始&apos;,
IF( ISPICKVAL(Status, &apos;Active&apos;), &apos;活动&apos;,
IF( ISPICKVAL(Status, &apos;Consent&apos;), &apos;应答&apos;,
IF( ISPICKVAL(Status, &apos;Waiting&apos;), &apos;等待&apos;,
IF( ISPICKVAL(Status, &apos;Paused&apos;), &apos;暂停&apos;,
IF( ISPICKVAL(Status, &apos;Inactive&apos;), &apos;失效&apos;,
IF( ISPICKVAL(Status, &apos;Ended&apos;), &apos;结束&apos;,
IF( ISPICKVAL(Status, &apos;Error&apos;), &apos;异常&apos;,
&apos;&apos;))))))))</formula>
        <label>Query Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_Ship_to_Party_Number__c</fullName>
        <label>Ship to Party</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_Sold_to_Party__c</fullName>
        <formula>MessagingEndUser.CN_Account__r.Name</formula>
        <label>Sold to Party</label>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>AfterSales_Queue</fullName>
        <columns>Name</columns>
        <columns>EndUserAccount</columns>
        <columns>EndUserContact</columns>
        <columns>CN_Query_Category__c</columns>
        <columns>Owner</columns>
        <columns>CN_Query_Status__c</columns>
        <columns>StartTime</columns>
        <columns>EndTime</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CN_Query_Category__c</field>
            <operation>equals</operation>
            <value>订单物流,退货退款</value>
        </filters>
        <label>AfterSales Queue</label>
        <sharedTo>
            <roleAndSubordinates>CN_CS</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_Message_Session</fullName>
        <columns>Owner</columns>
        <columns>Name</columns>
        <columns>MessagingChannel</columns>
        <columns>MessagingEndUser</columns>
        <columns>Status</columns>
        <columns>StartTime</columns>
        <columns>EndTime</columns>
        <columns>PlatformType</columns>
        <filterScope>Mine</filterScope>
        <label>All Message Session</label>
    </listViews>
    <listViews>
        <fullName>CN_Messaging_QU_Default_MessagingSession</fullName>
        <filterScope>Queue</filterScope>
        <label>CN_Messaging_QU_Default</label>
        <queue>CN_Messaging_QU_Default</queue>
        <sharedTo>
            <roleAndSubordinates>CN_CS</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Messaging_DefaultQueue_MessagingSession</fullName>
        <columns>Name</columns>
        <columns>EndUserAccount</columns>
        <columns>EndUserContact</columns>
        <columns>CN_Query_Category__c</columns>
        <columns>Owner</columns>
        <columns>CN_Query_Status__c</columns>
        <columns>StartTime</columns>
        <columns>EndTime</columns>
        <filterScope>Mine</filterScope>
        <label>My Message Queue</label>
        <sharedTo>
            <roleAndSubordinates>CN_CS</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Sales_Queue</fullName>
        <columns>Name</columns>
        <columns>EndUserAccount</columns>
        <columns>EndUserContact</columns>
        <columns>CN_Query_Category__c</columns>
        <columns>Owner</columns>
        <columns>CN_Query_Status__c</columns>
        <columns>StartTime</columns>
        <columns>EndTime</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CN_Query_Category__c</field>
            <operation>equals</operation>
            <value>注册账号,产品促销,配方活动</value>
        </filters>
        <label>PreSales Queue</label>
        <sharedTo>
            <role>CN_CS</role>
        </sharedTo>
    </listViews>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>